--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -4,6 +4,7 @@ jobs:
   test:
     strategy:
       matrix:
+        arch: [x86_64, aarch64]
         os: [ubuntu-latest, macos-latest, windows-latest]
       fail-fast: false
     runs-on: ${{matrix.os}}
@@ -13,7 +14,7 @@ jobs:
         with:
           version: 0.10.0-dev.3027+0e26c6149
       - run: |
-          zig build test -Dfetch -Dci_target=${{matrix.os}}
+          zig build test -Dfetch -Dci_target=${{matrix.os}}-${{matrix.arch}}
         shell: bash
       - uses: actions/upload-artifact@v2
         with:
