--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,5 +18,5 @@ jobs:
         shell: bash
       - uses: actions/upload-artifact@v2
         with:
-          name: zigup ${{ matrix.os }}
+          name: zigup ${{ matrix.os }}-${{ matrix.arch }}
           path: zig-out/bin/*
